--- a/TestProject002/demo/src/main/resources/application.properties
+++ b/TestProject002/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # spring.datasource.url=jdbc:sqlserver://183.111.79.242,11156/CENTERO
-spring.datasource.url=jdbc:sqlserver://DESKTOP-56DKMOG\\sqlexpress;databaseName=CENTERO;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://DESKTOP-56DKMOG\\sqlexpress;databaseName=RECIPE;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=mosti_ksk
 spring.datasource.password=Rlatkdrl123!
 
