--- a/TestProject002/demo/src/main/resources/application.properties
+++ b/TestProject002/demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # spring.datasource.url=jdbc:sqlserver://183.111.79.242,11156/CENTERO
-spring.datasource.url=jdbc:sqlserver://DESKTOP-56DKMOG\\sqlexpress;databaseName=RECIPE;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=mosti_ksk
-spring.datasource.password=Rlatkdrl123!
+spring.datasource.url=jdbc:sqlserver://DESKTOP-DQ5BA59;databaseName=RECIPE;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=local_ksk
+spring.datasource.password=rlatkdrl123!
 
 
 mybatis.mapper-locations:com.example.mapper/*.xml
